couleur du texte des collapse (correction)

--- a/kasa/src/Components/Collapse/collapse.css
+++ b/kasa/src/Components/Collapse/collapse.css
@@ -1,7 +1,6 @@
 .accordionItem{
     margin-bottom: 2%;
     list-style-type: none;  
-    /* border: 1px saddlebrown solid; */
 }
 
 .accordionToggle{
@@ -12,8 +11,8 @@
 
 .accordionTitle{
     font-size: 24px;
-   margin : 10px 10px;
-   padding: 7px;
+    margin : 10px 10px;
+    padding: 7px;
 }
 
 .accordionArrow{
@@ -32,15 +31,24 @@
 @media screen and (max-width: 1490px) {
 
     .accordionItem{
-        margin-bottom: 30px;
+        margin-bottom: 40px;
         list-style-type: none;  
-        border: 1px blue solid;
     }
 
     .accordionItem{
        max-width: 100% ;
     }
 
-    span{ background-color: blue;}
+    .accordionTitle{
+    font-size: 1.2em;
+     line-height: 40px;
+    
+    }
+    .accordionArrow{
+        right : 2%;
+        top: 13px;
+        margin-left: 2%;
+    }
+
 }
   
