--- a/kasa/src/Layout/layout.css
+++ b/kasa/src/Layout/layout.css
@@ -1,5 +1,6 @@
 main {
   margin: 10px 10%;
+  padding-bottom: 5%;
   width: 80%;
   min-width: 320px;
   border : 1px green solid;
@@ -7,8 +8,9 @@ main {
 
   @media screen and (max-width: 1490px) {
     main {
-      margin: 10% 5%;
       width: 90%;
+      margin: 10px 5%;
+      padding-bottom: 15%;
     }
   }
 
