--- a/kasa/src/Utils/Style/App.css
+++ b/kasa/src/Utils/Style/App.css
@@ -7,13 +7,7 @@
  
 }
 
- /* html{
-  /* min-height: 100%;
-  margin-bottom: 30px; 
-} */
-
 .app{
-  border:darkgoldenrod solid 1px;
   position: relative;
   min-height: 100%;
 }
